Refactoring classes and tests